# cminus

./: .gitignore  Cargo.toml  compiler.md  enum.cm  generics.cm  grammar.pest  input.stderr  junk_build.rs  multidim.cm  pointer.cm  readme.md  rustfmt.toml  struct.cm  todo.md  trait.cm
.cargo/: config.toml
ass4/: ex12  ex12.c  ex14.c  ex18.c  ex3  ex3.c  ex8  ex8.c  midtermcrap.md  readme.md
builder/: Cargo.toml
builder/src/: main.rs
derive-help/: Cargo.toml
derive-help/src/: lib.rs
derive-help/tests/: ui.rs
due_input/: array.char.cm  array.cm  array.float.cm  bubble.char.cm  bubble.cm  bubble.float.cm  dynamic.cm  if.char.cm  if.cm  if.float.cm  if1.cm  newdyn.cm  while.cm  while.float.cm  while2.cm  while2.float.cm  while3.cm  while_array.cm
info/: CmiinusSkeleton.g4
input/: add.cm  add.float.cm  and.cm  and.float.cm  arith.cm  arith2.cm  array.cm  array.float.cm  bubble.cm  bubble.float.cm  call.cm  check.cm  constdim.cm  dcs.cm  decl1.cm  decl2.cm  decl3.cm  dim.cm  dimen.cm  div.cm  div.float.cm  dynamic.cm  ecall.cm  ejohn1.cm  ejohn2.cm  eq.cm  expr.cm  expr.float.cm  f_noparams.cm  farray.cm  func.cm  func2.cm  func_no.cm  funcproc.cm  gcd.cm  gt.cm  hello.cm  if.cm  if.float.cm  if1.cm  (+43 more)
nb/input/: add.cm
src/: alloc.rs  ast.rs  codegen.rs  const_fold.rs  data_struc.rs  error.rs  gen.rs  lir.rs  main.rs  precedence.rs  typeck.rs  visit.rs
src/ast/: lex.rs  parse.rs  parse1.rs  parsy.rs  precedence.rs  types.rs
src/data_struc/: rawptr.rs  rawvec.rs  str_help.rs
src/lir/: asmgen.rs  const_fold.rs  llvmgen.rs  lower.rs  mono.rs  visit.rs
src/typeck/: check.rs  generic.rs  infer.rs  rawvec.rs  scope.rs  trait_solver.rs
stdlib/: lib.cm
stuff/: display.cm  enum.cm  idea.cm  into.cm  large.cm  match.cm  maths.cm  multidim.cm  pointer.cm  recur_ty.cm  todo.md
stuff/assert/: assert.cm
stuff/enum/: enum_err.cm  recur_ty.cm
stuff/generic/: generics.cm
(+157 files in other folders)
