[package]
name = "enumc"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
version = "0.1.0"
edition = "2018"

[features]
default = ["llvm"]
llvm = [ "inkwell", "either"]

[dependencies]
pest = { version = "2.1", features = [ "pretty-print" ] }
pest_derive = "2.1"
inkwell = { version = "0.1.0-beta.3", features = ["llvm10-0"], optional = true }
either = { version = "1.6", optional = true }
lazy_static = "1.4"
derive-help = { path = "./derive-help", version = "0.1" }
unicode-xid = "0.2"
rustc-hash = "1.1"
parking_lot = "0.11"
once_cell = "1.8"

[workspace]
members = ["derive-help", "builder"]
